# NetPatch-Master

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  apt_package.cpp  apt_package.h  cve.cpp  cve.h  cve_parser.py  db.cpp  db.h  main.cpp  python_api.cpp  python_api.h  server.cpp  server.h
glad/include/glad/: glad.h
glad/src/: glad.c
python_modules/: cve_parser.py
